--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,12 +32,12 @@ jobs:
         uses: actions/upload-pages-artifact@v3
   deploy:
     needs: build
-    permissions:
-      pages: write
-      id-token: write
-    concurrency:
-      group: pages
-      cancel-in-progress: true
+    #permissions:
+    #  pages: write
+    #  id-token: write
+    #concurrency:
+    #  group: pages
+    #  cancel-in-progress: true
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
