--- a/cecil.yml
+++ b/cecil.yml
@@ -1,4 +1,4 @@
-title: Demo Bootstrap Icons
+title: Bootstrap Icons Font
 description: Demo of Cecil with Bootstrap Icons.
 baseurl: https://cecilapp.github.io/demo-bootstrap-icons/
 canonicalurl: true
