--- a/cecil.yml
+++ b/cecil.yml
@@ -1,7 +1,7 @@
 title: Bootstrap Icons Font
 description: Demo of Cecil with Bootstrap Icons.
 baseurl: https://cecilapp.github.io/demo-bootstrap-icons/
-canonicalurl: true
+#canonicalurl: true
 
 static:
   # default Cecil behavior
